hphp/test/zend/good/ext/filter/tests/036.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("filter")) print "skip";
}
