hphp/test/zend/bad/ext/intl/tests/dateformat_format_variant3.php.skipif
<?php if( !extension_loaded( 'intl' ) ) print 'skip'; ?>
<?php if (version_compare(INTL_ICU_VERSION, '52.1') < 0) die('skip for ICU >= 52.1'); ?>